adding substituiton to event panel and full pitch to lineup

--- a/working.ipynb
+++ b/working.ipynb
@@ -23,7 +23,7 @@
     "    def __init__(self, lock, config):\n",
     "        self.lock = lock\n",
     "        self.config = config\n",
-    "        self.leagues_db = pd.DataFrame(columns=['country_id', 'country_name', 'league_id', 'league_name'])\n",
+    "        self.leagues_db = pd.DataFrame(columns=['country_id', 'country_name', 'league_id', 'league_name']).astype({'country_id': 'int32', 'league_id':'int32'})\n",
     "        self.events_db = pd.DataFrame()\n",
     "        self.league_db_standings = {}\n",
     "        self.setup_all_league_standings_from_disk()\n",
@@ -68,7 +68,7 @@
     "        df = self.read_db_from_disk(self.config.path_leagues_db, False)\n",
     "        if df.empty:\n",
     "            return False\n",
-    "        self.leagues_db = df\n",
+    "        self.leagues_db = df.astype({'country_id': 'int32', 'league_id':'int32'})\n",
     "        return True\n",
     "\n",
     "    def setup_events_db_from_disk(self):\n",
@@ -139,7 +139,7 @@
     "            self.update_last_refresh_times(0)\n",
     "        except Exception as e:\n",
     "            logging.error('error in update_leagues_db_from_fetch {}'.format(e))\n",
-    "        return leagues_db\n",
+    "        return leagues_db.astype({'country_id': 'int32', 'league_id':'int32'})\n",
     "\n",
     "\n",
     "    def update_events_from_fetch(self, date_from, date_to, events_db):\n",
@@ -169,6 +169,7 @@
     "\n",
     "    def update_league_db_standings_from_fetch(self, league_id, league_db_standings):\n",
     "        # check if data is already fresh\n",
+    "        logging.info('updating league {} from fetch'.format(league_id))\n",
     "        if self.is_data_fresh(league_id):\n",
     "            logging.info('in update_league_db_standings_from_fetch and data is fresh')\n",
     "            return league_db_standings[league_id]\n",
@@ -177,11 +178,13 @@
     "        # fetch data from webservice\n",
     "        path = self.config.apifootball_host + '/?action=get_standings&league_id=' + str(\n",
     "            league_id) + '&APIkey=' + self.config.apifootball_key\n",
+    "        logging.info('fetching from path: {}'.format(path))\n",
     "        try:\n",
     "            response = requests.get(path)\n",
-    "            df = pd.DataFrame(response.json())\n",
+    "            res = response.json()\n",
+    "            df = pd.DataFrame(res)\n",
     "            logging.info('changed league_db_standings from the fetch for {}'.format(league_id))\n",
-    "            self.disk_connection.write_db_to_disk(self.config.path_league_standings_stem + str(league_id), df)\n",
+    "            self.disk_connection.write_db_to_disk(self.config.path_league_standings_stem + str(league_id) + '.csv', df)\n",
     "            self.update_last_refresh_times(league_id)\n",
     "        except Exception as e:\n",
     "            logging.error('error in update_league_db_standings_from_fetch {}'.format(e))\n",
@@ -350,24 +353,28 @@
       "INFO:root:getting db at /Users/ollieloney/SoccerScores/databases/leagues_db.csv from disk\n",
       "ERROR:root:error in getting db at /Users/ollieloney/SoccerScores/databases/leagues_db.csv error is parser_f() got an unexpected keyword argument 'index'\n",
       "INFO:root:in update_events_from_fetch data is stale\n",
-      "INFO:root:fetch for https://apifootball.com/api/?action=get_events&from=2019-10-15&to=2019-11-12&APIkey=9fe5c8415f9eda3d0abd11d51578518d6a7c48d172f82abed46bf5bd9fe2479f\n",
-      "DEBUG:urllib3.connectionpool:Starting new HTTPS connection (1): apifootball.com:443\n",
-      "DEBUG:urllib3.connectionpool:https://apifootball.com:443 \"GET /api/?action=get_events&from=2019-10-15&to=2019-11-12&APIkey=9fe5c8415f9eda3d0abd11d51578518d6a7c48d172f82abed46bf5bd9fe2479f HTTP/1.1\" 200 None\n",
+      "INFO:root:fetch for https://apiv2.apifootball.com/?action=get_events&from=2019-10-27&to=2019-11-24&APIkey=9fe5c8415f9eda3d0abd11d51578518d6a7c48d172f82abed46bf5bd9fe2479f\n",
+      "DEBUG:urllib3.connectionpool:Starting new HTTPS connection (1): apiv2.apifootball.com:443\n",
+      "DEBUG:urllib3.connectionpool:https://apiv2.apifootball.com:443 \"GET /?action=get_events&from=2019-10-27&to=2019-11-24&APIkey=9fe5c8415f9eda3d0abd11d51578518d6a7c48d172f82abed46bf5bd9fe2479f HTTP/1.1\" 200 None\n",
       "INFO:root:writing db to fisk at /Users/ollieloney/SoccerScores/databases/events_db.csv\n",
       "INFO:root:in update_leagues_db_from_fetch data is stale\n",
-      "DEBUG:urllib3.connectionpool:Starting new HTTPS connection (1): apifootball.com:443\n",
-      "DEBUG:urllib3.connectionpool:https://apifootball.com:443 \"GET /api/?action=get_leagues&APIkey=9fe5c8415f9eda3d0abd11d51578518d6a7c48d172f82abed46bf5bd9fe2479f HTTP/1.1\" 200 180\n",
+      "DEBUG:urllib3.connectionpool:Starting new HTTPS connection (1): apiv2.apifootball.com:443\n",
+      "DEBUG:urllib3.connectionpool:https://apiv2.apifootball.com:443 \"GET /?action=get_leagues&APIkey=9fe5c8415f9eda3d0abd11d51578518d6a7c48d172f82abed46bf5bd9fe2479f HTTP/1.1\" 200 237\n",
       "INFO:root:writing db to fisk at /Users/ollieloney/SoccerScores/databases/leagues_db.csv\n",
+      "INFO:root:updating league 149 from fetch\n",
       "INFO:root:in update_league_db_standings_from_fetch data is stale\n",
-      "DEBUG:urllib3.connectionpool:Starting new HTTPS connection (1): apifootball.com:443\n",
-      "DEBUG:urllib3.connectionpool:https://apifootball.com:443 \"GET /api/?action=get_standings&league_id=63&APIkey=9fe5c8415f9eda3d0abd11d51578518d6a7c48d172f82abed46bf5bd9fe2479f HTTP/1.1\" 200 None\n",
-      "INFO:root:changed league_db_standings from the fetch for 63\n",
-      "INFO:root:writing db to fisk at /Users/ollieloney/SoccerScores/databases/league_standings_63\n",
+      "INFO:root:fetching from path: https://apiv2.apifootball.com/?action=get_standings&league_id=149&APIkey=9fe5c8415f9eda3d0abd11d51578518d6a7c48d172f82abed46bf5bd9fe2479f\n",
+      "DEBUG:urllib3.connectionpool:Starting new HTTPS connection (1): apiv2.apifootball.com:443\n",
+      "DEBUG:urllib3.connectionpool:https://apiv2.apifootball.com:443 \"GET /?action=get_standings&league_id=149&APIkey=9fe5c8415f9eda3d0abd11d51578518d6a7c48d172f82abed46bf5bd9fe2479f HTTP/1.1\" 200 None\n",
+      "INFO:root:changed league_db_standings from the fetch for 149\n",
+      "INFO:root:writing db to fisk at /Users/ollieloney/SoccerScores/databases/league_standings_149.csv\n",
+      "INFO:root:updating league 177 from fetch\n",
       "INFO:root:in update_league_db_standings_from_fetch data is stale\n",
-      "DEBUG:urllib3.connectionpool:Starting new HTTPS connection (1): apifootball.com:443\n",
-      "DEBUG:urllib3.connectionpool:https://apifootball.com:443 \"GET /api/?action=get_standings&league_id=128&APIkey=9fe5c8415f9eda3d0abd11d51578518d6a7c48d172f82abed46bf5bd9fe2479f HTTP/1.1\" 200 None\n",
-      "INFO:root:changed league_db_standings from the fetch for 128\n",
-      "INFO:root:writing db to fisk at /Users/ollieloney/SoccerScores/databases/league_standings_128\n"
+      "INFO:root:fetching from path: https://apiv2.apifootball.com/?action=get_standings&league_id=177&APIkey=9fe5c8415f9eda3d0abd11d51578518d6a7c48d172f82abed46bf5bd9fe2479f\n",
+      "DEBUG:urllib3.connectionpool:Starting new HTTPS connection (1): apiv2.apifootball.com:443\n",
+      "DEBUG:urllib3.connectionpool:https://apiv2.apifootball.com:443 \"GET /?action=get_standings&league_id=177&APIkey=9fe5c8415f9eda3d0abd11d51578518d6a7c48d172f82abed46bf5bd9fe2479f HTTP/1.1\" 200 None\n",
+      "INFO:root:changed league_db_standings from the fetch for 177\n",
+      "INFO:root:writing db to fisk at /Users/ollieloney/SoccerScores/databases/league_standings_177.csv\n"
      ]
     }
    ],
@@ -381,6 +388,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_id</th>\n",
+       "      <th>country_name</th>\n",
+       "      <th>league_id</th>\n",
+       "      <th>league_name</th>\n",
+       "      <th>league_season</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>41</td>\n",
+       "      <td>England</td>\n",
+       "      <td>149</td>\n",
+       "      <td>Championship</td>\n",
+       "      <td>2019/2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>46</td>\n",
+       "      <td>France</td>\n",
+       "      <td>177</td>\n",
+       "      <td>Ligue 2</td>\n",
+       "      <td>2019/2020</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   country_id country_name  league_id   league_name league_season\n",
+       "0          41      England        149  Championship     2019/2020\n",
+       "1          46       France        177       Ligue 2     2019/2020"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_id</th>\n",
+       "      <th>country_name</th>\n",
+       "      <th>league_id</th>\n",
+       "      <th>league_name</th>\n",
+       "      <th>league_season</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>41</td>\n",
+       "      <td>England</td>\n",
+       "      <td>149</td>\n",
+       "      <td>Championship</td>\n",
+       "      <td>2019/2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>46</td>\n",
+       "      <td>France</td>\n",
+       "      <td>177</td>\n",
+       "      <td>Ligue 2</td>\n",
+       "      <td>2019/2020</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   country_id country_name  league_id   league_name league_season\n",
+       "0          41      England        149  Championship     2019/2020\n",
+       "1          46       France        177       Ligue 2     2019/2020"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.astype({'country_id': 'int32', 'league_id':'int32'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -388,30 +547,250 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:inside get_leagues\n",
       "INFO:root:in update_leagues_db_from_fetch and data is fresh\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "df = db_con.get_league_db()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_id</th>\n",
+       "      <th>country_name</th>\n",
+       "      <th>league_id</th>\n",
+       "      <th>league_name</th>\n",
+       "      <th>league_season</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>41</td>\n",
+       "      <td>England</td>\n",
+       "      <td>149</td>\n",
+       "      <td>Championship</td>\n",
+       "      <td>2019/2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>46</td>\n",
+       "      <td>France</td>\n",
+       "      <td>177</td>\n",
+       "      <td>Ligue 2</td>\n",
+       "      <td>2019/2020</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'173': {'country_name': 'France',\n",
-       "  'leagues': {'league_ids': ['128'],\n",
-       "   'country_name': 'France',\n",
-       "   'league_names': ['Ligue 2']}},\n",
-       " '169': {'country_name': 'England',\n",
-       "  'leagues': {'league_ids': ['63'],\n",
-       "   'country_name': 'England',\n",
-       "   'league_names': ['Championship']}}}"
+       "   country_id country_name  league_id   league_name league_season\n",
+       "0          41      England        149  Championship     2019/2020\n",
+       "1          46       France        177       Ligue 2     2019/2020"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_sidebar_info()"
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     True\n",
+       "1    False\n",
+       "Name: country_id, dtype: bool"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['country_id'] == 41"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:in update_leagues_db_from_fetch and data is fresh\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_id</th>\n",
+       "      <th>country_name</th>\n",
+       "      <th>league_id</th>\n",
+       "      <th>league_name</th>\n",
+       "      <th>league_season</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>41</td>\n",
+       "      <td>England</td>\n",
+       "      <td>149</td>\n",
+       "      <td>Championship</td>\n",
+       "      <td>2019/2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>46</td>\n",
+       "      <td>France</td>\n",
+       "      <td>177</td>\n",
+       "      <td>Ligue 2</td>\n",
+       "      <td>2019/2020</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   country_id country_name  league_id   league_name league_season\n",
+       "0          41      England        149  Championship     2019/2020\n",
+       "1          46       France        177       Ligue 2     2019/2020"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db_con.host_connection.update_leagues_db_from_fetch(db_con.leagues_db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "41 in df['country_id'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'England'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if 41 in df['country_id'].values\n",
+    "    return df.loc[df['country_id'] == 41].iloc[0].country_name\n",
+    "else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def get_name_from_country_id(country_id):\n",
+    "    country_id=int(country_id)\n",
+    "    df = db_con.get_league_db()\n",
+    "    df.iloc[df['country_id'] == country_id]\n",
+    "    return jsonify(df.to_dict('index'))"
    ]
   },
   {
@@ -432,14 +811,16 @@
     {
      "data": {
       "text/plain": [
-       "{0: {'country_id': '169',\n",
+       "{0: {'country_id': '41',\n",
        "  'country_name': 'England',\n",
-       "  'league_id': '63',\n",
-       "  'league_name': 'Championship'},\n",
-       " 1: {'country_id': '173',\n",
+       "  'league_id': '149',\n",
+       "  'league_name': 'Championship',\n",
+       "  'league_season': '2019/2020'},\n",
+       " 1: {'country_id': '46',\n",
        "  'country_name': 'France',\n",
-       "  'league_id': '128',\n",
-       "  'league_name': 'Ligue 2'}}"
+       "  'league_id': '177',\n",
+       "  'league_name': 'Ligue 2',\n",
+       "  'league_season': '2019/2020'}}"
       ]
      },
      "execution_count": 4,
