adding get team info end point

--- a/working.ipynb
+++ b/working.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,9 +407,9 @@
       "INFO:root:getting db at /Users/ollieloney/SoccerScores/databases/league_standings_149.csv from disk\n",
       "INFO:root:getting db at /Users/ollieloney/SoccerScores/databases/league_standings_177.csv from disk\n",
       "INFO:root:in update_events_from_fetch data is stale\n",
-      "INFO:root:fetch for https://apiv2.apifootball.com/?action=get_events&from=2019-10-29&to=2019-12-10&APIkey=9fe5c8415f9eda3d0abd11d51578518d6a7c48d172f82abed46bf5bd9fe2479f\n",
+      "INFO:root:fetch for https://apiv2.apifootball.com/?action=get_events&from=2019-10-30&to=2019-12-11&APIkey=9fe5c8415f9eda3d0abd11d51578518d6a7c48d172f82abed46bf5bd9fe2479f\n",
       "DEBUG:urllib3.connectionpool:Starting new HTTPS connection (1): apiv2.apifootball.com:443\n",
-      "DEBUG:urllib3.connectionpool:https://apiv2.apifootball.com:443 \"GET /?action=get_events&from=2019-10-29&to=2019-12-10&APIkey=9fe5c8415f9eda3d0abd11d51578518d6a7c48d172f82abed46bf5bd9fe2479f HTTP/1.1\" 200 None\n",
+      "DEBUG:urllib3.connectionpool:https://apiv2.apifootball.com:443 \"GET /?action=get_events&from=2019-10-30&to=2019-12-11&APIkey=9fe5c8415f9eda3d0abd11d51578518d6a7c48d172f82abed46bf5bd9fe2479f HTTP/1.1\" 200 None\n",
       "INFO:root:writing db to fisk at /Users/ollieloney/SoccerScores/databases/events_db.csv\n",
       "INFO:root:in update_leagues_db_from_fetch data is stale\n",
       "DEBUG:urllib3.connectionpool:Starting new HTTPS connection (1): apiv2.apifootball.com:443\n",
@@ -442,36 +442,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_name='Fulham'\n",
+    "\n",
+    "def get_team_info(team_name):\n",
+    "    leagues = db_con.leagues_db\n",
+    "    for league in leagues.itertuples():\n",
+    "        league_standing = db_con.get_league_db_standings(league.league_id)\n",
+    "        if team_name not in list(league_standing['team_name']):\n",
+    "            continue\n",
+    "        info_in_league = league_standing.loc[league_standing['team_name'] == team_name].iloc[0]    \n",
+    "        return {\n",
+    "            'country_name': league.country_name,\n",
+    "            'country_id': league.country_id,\n",
+    "            'league_id': league.league_id,\n",
+    "            'league_name': league.league_name,\n",
+    "            'team_id': info_in_league.team_id,\n",
+    "            'pos': info_in_league.overall_league_position\n",
+    "        }\n",
+    "    return {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:updating league 149 from fetch\n",
+      "INFO:root:in update_league_db_standings_from_fetch and data is fresh\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[{'home': True,\n",
-       "  'home_score': '2',\n",
-       "  'away_score': '1',\n",
-       "  'match_date': datetime.datetime(2019, 11, 22, 0, 0),\n",
-       "  'opponent': 'Fulham'},\n",
-       " {'home': False,\n",
-       "  'home_score': '0',\n",
-       "  'away_score': '1',\n",
-       "  'match_date': datetime.datetime(2019, 11, 9, 0, 0),\n",
-       "  'opponent': 'Fulham'},\n",
-       " {'home': True,\n",
-       "  'home_score': '0',\n",
-       "  'away_score': '3',\n",
-       "  'match_date': datetime.datetime(2019, 11, 2, 0, 0),\n",
-       "  'opponent': 'Fulham'}]"
+       "{'country_name': 'England',\n",
+       " 'country_id': 41,\n",
+       " 'league_id': 149,\n",
+       " 'league_name': 'Championship',\n",
+       " 'team_id': '2639',\n",
+       " 'pos': '3'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_last_matches_for_team('Fulham')"
+    "get_team_info('Fulham')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:updating league 46 from fetch\n",
+      "INFO:root:in update_league_db_standings_from_fetch and data is fresh\n",
+      "INFO:root:updating league 46 from fetch\n",
+      "INFO:root:in update_league_db_standings_from_fetch and data is fresh\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "db_con.get_league_db_standings(int(46)).loc[db_con.get_league_db_standings(int(46))['team_name'] == 'Abahani Limited'].iloc[0].away_league_D"
    ]
   },
   {
